adds usercase and component diagrams, augments analysis

--- a/doc/analysis.adoc
+++ b/doc/analysis.adoc
@@ -2,9 +2,7 @@
 
 Необходимо разработать приложение, позволяющее создавать и разгадывать канадский кроссворд.
 
-== Требования
-
-*Взаимодействие с пользователем* - интерфейс коммандной строки (CLI).
+== Функциональные требования
 
 .Режимы работы
 * пользовательский (разгадывание);
@@ -17,5 +15,32 @@
 .Выходные данные
 * *режим конструктора* - сгенерированный кроссворд или отчет об ошибке при невозможности его создания;
 * *режим пользователя* - сообщение о решении (не решении) кроссворда.
+
+== Нефункциональные требования
+
+* взаимодействие с пользователем - интерфейс коммандной строки (CLI);
+* разработка на языке Java;
+* используемые библиотеки - только для манипулирования консолью;
+* максимальное время работы - не более 1,5 мин. 
+
+== Бизнес-модель
+
+Программа предоставляет два режима работы: пользовательский и конструкторский 
+(вследствие чего необходимо реализовать некоторую аутентификацию). + 
+В режиме пользователя клиент может выбрать интересующий его кроссворд и разгадывать его. +
+В режиме конструктора - создавать кроссворды путем ввода слов и подсказок. +
+link:uml/user_case.pu[Диаграмма прецедентов]
+
+== Архитектура приложения
+
+В основе приложения предлагается использовать паттерн MVP.
+Это улучшит логическую архитектуру, что позволит легче поддерживать и модифицировать приложение, 
+а также позволит абстрагироваться от конкретной реализации пользовательского интерфейса. +
+Model предлагается разделить на два компонента: storage и generator, что позволит отделить
+алгоритм генерации кроссвордов от способа хранения данных (БД, файлы, ОП). +
+link:uml/components.pu[Компоненты программы]
+
+
+
 
 
