augments analysis with implementation

--- a/doc/analysis.adoc
+++ b/doc/analysis.adoc
@@ -38,7 +38,27 @@ link:uml/user_case.pu[Диаграмма прецедентов]
 а также позволит абстрагироваться от конкретной реализации пользовательского интерфейса. +
 Model предлагается разделить на два компонента: storage и generator, что позволит отделить
 алгоритм генерации кроссвордов от способа хранения данных (БД, файлы, ОП). +
+Важным пунктом архитектуры классов является взаимодействие блоков View и Presenter.
+View имеет ссылку на Presenter, чтобы передавать запросы от пользователя на выполнение
+каких-то действий. Presenter имеет ссылку на View, чтобы передавать данные View в ответ на эти запросы
+для отображения пользователю. +
 link:uml/components.pu[Компоненты программы]
+
+== Реализация
+
+Реализовывать приложение предлагается с помощью следующей логической архитектуры: +
+link:uml/classes.pu[Полная диаграмма классов]. +
+Для реализации пользовательского интерфейса предлагается использовать
+библиотеку link:https://github.com/mabe02/lanterna[lanterna]
+
+
+
+
+
+
+
+
+
 
 
 
